 be chosen automatically based on your system's localisation, but can be 
 overridden by editing the 'locale' variable in .mnemosyne/config.py. 
-improved tooltips.
-added desktop file, so that Mnemosyne shows up in the application menu
 under Linux.
-more verbose error messages when an import failed, showing the line that
 failed to parse.
-added support for Unicode filenames.
-recreate user id from history folder in case the config file was 
 accidentally deleted.
-don't exit when final save failed (requested by lebowski_404).
-added more supported sound and picture formats.
-don't stumble over (invalid) unicode in latex commands (reported by Tomek
 Guzialek).
-fixed 'Save as' option.

	
MNEMOSYNE 0.9.10 : 2007-10-28

-added 3-sided cards, to make dealing with vocabulary in foreign scripts 
 easier. Right clicking the text field in 'add cards' gives you to option
 to switch to 3-sided card input, which replaces the question and answer
 fields by 3 fields: written form, pronunciation, translation. After 
 selecting an initial grade, 2 cards will be added:

  Q: written form
  A: pronunciation
     translation

 and

  Q: translation
  A: written form
     pronunciation  

-when creating multiple cards from the same data (either through add vice
 versa or the 3-sided input), the relationship between these cards is now
 stored. In a future version, this will make it possible that editing one 
 card of the set automatically updates the other ones.
-added feature to insert an image or a sound tag by using a file selector. 
 Accessed through popup-menu or keyboard shortcuts.
-remember more settings across invocations: file formats and directories,
 reset learning data, column width and sorting order, ...
-rationalised keyboard shortcuts and menus. Added list of keyboard shortcuts
 to the website.
-polished file dialogs.
-when possible, paths in the config file are now saved relative to the 
 .mnemosyne directory rather than as absolute paths. This makes it easier